# flashcards

./: .gitignore  Cargo.toml  README.md
flashcards-client/: Cargo.toml  index.scss
flashcards-client/src/: callbacks.rs  card_hooks.rs  components.rs  main.rs  reducers.rs
flashcards-client/src/components/: actionbutton.rs  add_card_form.rs  card.rs  managemode.rs  studymode.rs
flashcards-client/src/reducers/: flashcards.rs  newcard.rs
flashcards-data/: Cargo.toml
flashcards-server/: .env  Cargo.toml  flashcard_db.db  flashcards.db  flashcards.db-shm  flashcards.db-wal
flashcards-server/migrations/: 20260211200818_create_cards_table.sql  20260216185736_update_cards_table.sql
flashcards-server/src/: database.rs  main.rs
flashcards_data/: Cargo.toml
flashcards_data/src/: lib.rs
