[package]
name = "flashcards-client"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
flashcards_data = { path = "../flashcards_data" }
implicit-clone = "0.6.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.58"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.108"
web-sys = "0.3.85"
wasm-logger = "0.2.0"
log = "0.4.29"
chrono = "0.4.43"
