[package]
name = "flashcards-server"
version = "0.1.0"
edition = "2024"

[dependencies]
flashcards_data = { path = "../flashcards_data" }
axum = "0.8.8"
axum-serde = "0.9.0"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
http = "1.4.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite"] }
